📚 Auto-update: News data refreshed - 2026-01-02 14:12 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -36342,5 +36342,69 @@
         "published": "Fri, 02 Jan 2026 12:46:25 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"Govt Extends Electronics Manufacturing Scheme Application Deadline Till September\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/07/electronics-manufacturing-india-1-1.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />The central government has approved 22 new projects under the Electronics Component Manufacturing Scheme (ECMS), clearing investments worth INR 41,863&#82"
+    },
+    {
+        "id": "https://www.engadget.com/ai/elon-musks-grok-ai-posted-csam-image-following-safeguard-lapses-140521454.html?src=rss",
+        "title": "Elon Musk's Grok AI posted CSAM image following safeguard 'lapses'",
+        "link": "https://www.engadget.com/ai/elon-musks-grok-ai-posted-csam-image-following-safeguard-lapses-140521454.html?src=rss",
+        "published": "Fri, 02 Jan 2026 14:05:21 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Elon Musk's Grok AI has been allowing users to transform photographs of woman and children into sexualized and compromising images, <a href=\"https://www.bloomberg.com/news/articles/2026-01-02/grok-posts-sexual-images-of-minors-after-lapses-in-safeguards?embedded-checkout=true\"><em>Bloomberg</em></a> reported. The issue has created an <a href=\"https://x.com/Xyless/status/2006997214862913863\">uproar</a> among users on X and prompted an &quot;<a href=\"https://www.cnbctv18.com/technology/global-o"
+    },
+    {
+        "id": "https://media.ccc.de/b/congress/2025",
+        "title": "39th Chaos Communication Congress Videos",
+        "link": "https://media.ccc.de/b/congress/2025",
+        "published": "Fri, 02 Jan 2026 13:17:06 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46464426\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/apple-watch-new-year-resolutions-workout-study/",
+        "title": "80% of Apple Watch users who step up exercise now push past Quitters Day, study shows",
+        "link": "https://www.zdnet.com/article/apple-watch-new-year-resolutions-workout-study/",
+        "published": "Fri, 02 Jan 2026 14:01:04 GMT",
+        "source": "Latest news",
+        "summary": "New research suggests some people manage to push through January and keep their workout momentum going."
+    },
+    {
+        "id": "https://www.zdnet.com/article/can-the-worlds-first-hdr10-smart-glasses-replace-your-2000-oled-tv-these-specs-say-yes/",
+        "title": "Can the world's first HDR10 smart glasses replace your $2,000 OLED TV - these specs say yes",
+        "link": "https://www.zdnet.com/article/can-the-worlds-first-hdr10-smart-glasses-replace-your-2000-oled-tv-these-specs-say-yes/",
+        "published": "Fri, 02 Jan 2026 14:00:47 GMT",
+        "source": "Latest news",
+        "summary": "Exclusive: The RayNeo Air 4 Pro have launched ahead of CES 2026, with a feature set that we've yet to see from XR glasses."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/indian-messaging-app-arattai-will-now-support-video-calls-on-android-tvs/articleshow/126307752.cms",
+        "title": "Indian messaging app Arattai will now support video calls on Android TVs",
+        "link": "https://economictimes.indiatimes.com/tech/technology/indian-messaging-app-arattai-will-now-support-video-calls-on-android-tvs/articleshow/126307752.cms",
+        "published": "Fri, 02 Jan 2026 19:32:39 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Homegrown personal messaging app Arattai is now available on Android TV. Making an announcement on X, Zoho chief scientist Sridhar Vembu said the app will enable an improved video call experience, adding that the app will soon receive updates this year."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/internet-splits-over-goyals-comments-on-gig-economy-after-strike/articleshow/126307292.cms",
+        "title": "Internet splits over Deepinder Goyal\u2019s comments on gig economy after strike",
+        "link": "https://economictimes.indiatimes.com/tech/technology/internet-splits-over-goyals-comments-on-gig-economy-after-strike/articleshow/126307292.cms",
+        "published": "Fri, 02 Jan 2026 19:02:46 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Deepinder Goyal's comments on the gig worker strike on Christmas and new year's eve went viral on social media and invited arguments both for and against from netizens, founders, and investors."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/iit-madras-inks-global-mous-as-part-of-international-expansion/articleshow/126307238.cms",
+        "title": "IIT Madras inks global MoUs as part of international expansion",
+        "link": "https://economictimes.indiatimes.com/tech/technology/iit-madras-inks-global-mous-as-part-of-international-expansion/articleshow/126307238.cms",
+        "published": "Fri, 02 Jan 2026 18:54:48 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "The Indian Institute of Technology Madras (IIT Madras) on Friday announced a series of international partnerships with academic institutions, industry players and government bodies across Germany, Malaysia, Singapore, the UAE, the UK and the US, marking a major push in its global expansion efforts."
+    },
+    {
+        "id": "https://yourstory.com/2026/01/govt-mulls-outcome-based-grading-mechanisms-for-iti-artificial-intelligence-automation",
+        "title": "Govt mulls outcome-based grading mechanisms for ITIs",
+        "link": "https://yourstory.com/2026/01/govt-mulls-outcome-based-grading-mechanisms-for-iti-artificial-intelligence-automation",
+        "published": "Fri, 02 Jan 2026 05:00:00 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "Modernising curriculum, strengthening industry co-creation, and ensuring flexibility and adaptability in training design were identified as key enablers for building a resilient skilling ecosystem."
     }
 ]
