--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -36406,5 +36406,157 @@
         "published": "Fri, 02 Jan 2026 05:00:00 GMT",
         "source": "YourStory RSS Feed",
         "summary": "Modernising curriculum, strengthening industry co-creation, and ensuring flexibility and adaptability in training design were identified as key enablers for building a resilient skilling ecosystem."
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/02/the-16-top-logistics-manufacturing-materials-startups-from-disrupt-startup-battlefield/",
+        "title": "The 16 top logistics, manufacturing, materials startups from Disrupt Startup Battlefield",
+        "link": "https://techcrunch.com/2026/01/02/the-16-top-logistics-manufacturing-materials-startups-from-disrupt-startup-battlefield/",
+        "published": "Fri, 02 Jan 2026 15:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "Here is the full list of the logistics, manufacturing, and materials Startup Battlefield 200 selectees, along with a note on what made us select them for the competition."
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/02/pebble-reboots-its-thinnest-smartwatch-with-the-pebble-round-2/",
+        "title": "Pebble reboots its thinnest smartwatch with the Pebble Round 2",
+        "link": "https://techcrunch.com/2026/01/02/pebble-reboots-its-thinnest-smartwatch-with-the-pebble-round-2/",
+        "published": "Fri, 02 Jan 2026 15:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "Pebble launches a $199 smartwatch with rounded screen that can last up to 2 weeks on one charge."
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/02/in-2026-ai-will-move-from-hype-to-pragmatism/",
+        "title": "In 2026, AI will move from hype to pragmatism",
+        "link": "https://techcrunch.com/2026/01/02/in-2026-ai-will-move-from-hype-to-pragmatism/",
+        "published": "Fri, 02 Jan 2026 14:43:00 +0000",
+        "source": "TechCrunch",
+        "summary": "In 2026, here's what you can expect from the AI industry: new architectures, smaller models, world models, reliable agents, physical AI, and products designed for real-world use."
+    },
+    {
+        "id": "https://www.theverge.com/news/851934/ge-appliances-smart-fridge-barcode-scanner-tablet",
+        "title": "This smart fridge wants to solve the hassle of grocery shopping",
+        "link": "https://www.theverge.com/news/851934/ge-appliances-smart-fridge-barcode-scanner-tablet",
+        "published": "2026-01-02T10:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Have you always wanted to scan your groceries at home? If so, the newest smart fridge from GE Appliances is for you. There's a barcode scanner built into the water dispenser that works along with an interior camera and an 8-inch tablet to help you keep track of what food you need and add it [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/852587/pebble-round-2-time-smartwatch-price-availability",
+        "title": "Pebble\u2019s round smartwatch is getting a reboot",
+        "link": "https://www.theverge.com/news/852587/pebble-round-2-time-smartwatch-price-availability",
+        "published": "2026-01-02T10:00:00-05:00",
+        "source": "The Verge",
+        "summary": "It's time to reboot another OG Pebble smartwatch - specifically, the round-faced Time Round, which is getting a follow-up more than a decade after its original launch. The new Pebble Round 2 improves upon its predecessor with longer battery life and a larger 1.3-inch touchscreen display, ditching the chunky bezel that surrounded the original Time [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/852649/tesla-q4-2025-sales-production-delivery-elon-musk",
+        "title": "Tesla\u2019s fourth quarter sales fell a lot more than expected",
+        "link": "https://www.theverge.com/news/852649/tesla-q4-2025-sales-production-delivery-elon-musk",
+        "published": "2026-01-02T09:31:18-05:00",
+        "source": "The Verge",
+        "summary": "Tesla's sales fell in the fourth quarter of 2025, as rising competition and the expiration of the federal EV tax credit continued to sap the company's global ambitions. The numbers were a lot worse than many Wall Street analysts were expecting. The disappointing sales report raises the question whether Tesla can reverse its downward fortune [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/byd-trounces-tesla-in-ev-sales-for-the-first-time/",
+        "title": "Tesla Loses Its EV Crown to BYD as Sales Keep Dropping",
+        "link": "https://www.wired.com/story/byd-trounces-tesla-in-ev-sales-for-the-first-time/",
+        "published": "Fri, 02 Jan 2026 14:54:34 +0000",
+        "source": "WIRED",
+        "summary": "Full-year electric vehicle sales figures have dropped for 2025, revealing China's BYD is now officially global top dog."
+    },
+    {
+        "id": "https://www.engadget.com/wearables/pebble-brings-its-round-faced-smartwatch-back-from-the-dead-150000172.html?src=rss",
+        "title": "Pebble brings its round-faced smartwatch back from the dead",
+        "link": "https://www.engadget.com/wearables/pebble-brings-its-round-faced-smartwatch-back-from-the-dead-150000172.html?src=rss",
+        "published": "Fri, 02 Jan 2026 15:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p></p>\n<p>You\u2019ve probably heard people say it\u2019s impossible to go back and correct some error from the past. To those people, you should raise a middle finger in defiance (they are miserable, after all, and then point them to the tale of Pebble\u2019s unlikely revival. The smartwatch pioneer\u2019s return <a class=\"link\" href=\"https://www.engadget.com/wearables/pebble-founder-eric-migicovsky-just-introduced-two-new-e-paper-smartwatches-160008363.html\" target=\"_blank\">was a surprise of 2025</a>, and now th"
+    },
+    {
+        "id": "https://www.engadget.com/social-media/engadget-podcast-everything-we-expect-at-ces-2026-144657955.html?src=rss",
+        "title": "Engadget Podcast: Everything we expect at CES 2026",
+        "link": "https://www.engadget.com/social-media/engadget-podcast-everything-we-expect-at-ces-2026-144657955.html?src=rss",
+        "published": "Fri, 02 Jan 2026 14:46:57 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>We\u2019re gearing up for CES 2026! Engadget will be on the ground, once again, to dive into the latest TVs, wearables and other wild tech from the world\u2019s biggest consumer electronics show. In this episode, we chat about some new products we expect to see, like Micro RGB LED TVs and AI devices, and peer into what\u2019s ahead for the rest of 2026.</p><div><div><div style=\"width: 100%; height: 200px;\"></div></div></div><h2 id=\"9863a508-48e9-444b-a70b-5e1dbaba47c7\"><strong>Subscribe!</strong></h2><ul><l"
+    },
+    {
+        "id": "https://beasthacker.com/til/parental-controls-arent-for-parents.html",
+        "title": "Parental Controls Aren't for Parents",
+        "link": "https://beasthacker.com/til/parental-controls-arent-for-parents.html",
+        "published": "Fri, 02 Jan 2026 13:42:37 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46464652\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/wiim-amp-ultra-music-streamer-review/",
+        "title": "I switched to a digital preamp for music streaming, and it was the best decision ever",
+        "link": "https://www.zdnet.com/article/wiim-amp-ultra-music-streamer-review/",
+        "published": "Fri, 02 Jan 2026 15:08:00 GMT",
+        "source": "Latest news",
+        "summary": "If you stream your music and want better audio than a Bluetooth speaker can offer, the WiiM Amp Ultra is the way to go."
+    },
+    {
+        "id": "https://www.zdnet.com/article/pebble-round-2-analog-watch-preorder/",
+        "title": "Cult favorite Pebble returns with Round 2 watch - and it's built to look as analog as possible",
+        "link": "https://www.zdnet.com/article/pebble-round-2-analog-watch-preorder/",
+        "published": "Fri, 02 Jan 2026 15:00:45 GMT",
+        "source": "Latest news",
+        "summary": "It's thin and has an e-paper display with 10 days of battery life."
+    },
+    {
+        "id": "https://www.zdnet.com/article/terramaster-f4-425-nas-storage-review/",
+        "title": "Should you invest in a NAS system at home to store your data? I did, and it's already paying off",
+        "link": "https://www.zdnet.com/article/terramaster-f4-425-nas-storage-review/",
+        "published": "Fri, 02 Jan 2026 14:56:00 GMT",
+        "source": "Latest news",
+        "summary": "If you're looking to break away from third-party file and directory storage, this model from Terramaster checks most boxes for me."
+    },
+    {
+        "id": "https://www.zdnet.com/article/lg-g5-vs-lg-g4/",
+        "title": "LG G5 vs. LG G4: I spent hours lab-testing both OLED TVs, and this one was the surprise winner",
+        "link": "https://www.zdnet.com/article/lg-g5-vs-lg-g4/",
+        "published": "Fri, 02 Jan 2026 14:47:00 GMT",
+        "source": "Latest news",
+        "summary": "ZDNET tested and compared the two latest models of LG's flagship OLED TV to help you decide which is the best fit for you."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/grok-says-safeguard-lapses-led-to-images-of-minors-in-minimal-clothing-on-x/articleshow/126308278.cms",
+        "title": "Grok says safeguard lapses led to images of 'minors in minimal clothing' on X",
+        "link": "https://economictimes.indiatimes.com/tech/technology/grok-says-safeguard-lapses-led-to-images-of-minors-in-minimal-clothing-on-x/articleshow/126308278.cms",
+        "published": "Fri, 02 Jan 2026 20:04:47 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Screenshots shared by users on X showed Grok's public media \u200ctab filled with images that users said had been altered when they uploaded photos and prompted the bot to alter them."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/meity-issues-notice-to-x-over-misuse-of-grok-to-create-obscene-content/articleshow/126308251.cms",
+        "title": "MeitY issues notice to X over misuse of Grok to create \u2018obscene\u2019 content",
+        "link": "https://economictimes.indiatimes.com/tech/technology/meity-issues-notice-to-x-over-misuse-of-grok-to-create-obscene-content/articleshow/126308251.cms",
+        "published": "Fri, 02 Jan 2026 20:03:23 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "In its notice to X (formerly Twitter), the MeitY asked the company to \u201cimmediately undertake a comprehensive technical, procedural and governance-level review\u201d of Grok, including its prompt-processing, output generation, image handling and safety guardrails, \u201cso as to ensure that the application does not generate, promote or facilitate content, which contains nudity, sexualisation, sexually explicit or otherwise unlawful content in any form\u201d."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/meity-issues-formal-notice-to-x-over-groks-it-act-lapses/articleshow/126308037.cms",
+        "title": "MeitY issues formal notice to X over Grok's  IT Act lapses",
+        "link": "https://economictimes.indiatimes.com/tech/technology/meity-issues-formal-notice-to-x-over-groks-it-act-lapses/articleshow/126308037.cms",
+        "published": "Fri, 02 Jan 2026 19:44:59 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "MeitY has issued a formal notice to X, citing serious lapses in statutory due diligence under the IT Act and Rules. The government is concerned about X's AI tool, Grok, generating and circulating obscene content, particularly targeting women and children. X has been directed to review Grok's framework, remove unlawful content, and take action against offending users within 72 hours."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/social-media-should-take-responsibility-of-content-they-publish-union-minister-vaishnaw/articleshow/126307820.cms",
+        "title": "Social media should take responsibility of content they publish: Union minister Vaishnaw",
+        "link": "https://economictimes.indiatimes.com/tech/technology/social-media-should-take-responsibility-of-content-they-publish-union-minister-vaishnaw/articleshow/126307820.cms",
+        "published": "Fri, 02 Jan 2026 19:34:05 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Social media companies must be accountable for the content they host, Union minister Ashwini Vaishnaw has emphasised. The Indian government is pushing for stricter laws to ensure this. Online platforms have been warned of legal action if they fail to remove obscene and unlawful material. This includes content generated by AI apps."
+    },
+    {
+        "id": "https://inc42.com/features/upi-logs-another-record-year-transactions-cross-22000-cr-mark-in-2025/",
+        "title": "UPI Logs Another Record Year, Transactions Cross 22,000 Cr Mark In 2025",
+        "link": "https://inc42.com/features/upi-logs-another-record-year-transactions-cross-22000-cr-mark-in-2025/",
+        "published": "Fri, 02 Jan 2026 14:55:49 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"UPI Logs Another Record Year, Transactions Cross 22,000 Cr Mark In 2025\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/YIR-UPI-in-2025-ftr.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />India\u2019s digital payments system, Unified Payments Interface (UPI), continued to scale in 2025, recording over 22,000 Cr transactions. It processed&#8230;"
     }
 ]
