--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -36558,5 +36558,85 @@
         "published": "Fri, 02 Jan 2026 14:55:49 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"UPI Logs Another Record Year, Transactions Cross 22,000 Cr Mark In 2025\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/YIR-UPI-in-2025-ftr.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />India\u2019s digital payments system, Unified Payments Interface (UPI), continued to scale in 2025, recording over 22,000 Cr transactions. It processed&#8230;"
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/02/nvidias-ai-empire-a-look-at-its-top-startup-investments/",
+        "title": "Nvidia\u2019s AI empire: A look at its top startup investments",
+        "link": "https://techcrunch.com/2026/01/02/nvidias-ai-empire-a-look-at-its-top-startup-investments/",
+        "published": "Fri, 02 Jan 2026 16:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "Over the last two years, Nvidia has used its ballooning fortunes to invest in over 100 AI startups. Here are the giant semiconductor's largest investments."
+    },
+    {
+        "id": "https://www.theverge.com/news/852630/microsoft-ceo-satya-nadella-scratchpad-blog-ai-slop-comments",
+        "title": "Microsoft\u00a0CEO Satya Nadella is now blogging about AI slop",
+        "link": "https://www.theverge.com/news/852630/microsoft-ceo-satya-nadella-scratchpad-blog-ai-slop-comments",
+        "published": "2026-01-02T10:37:43-05:00",
+        "source": "The Verge",
+        "summary": "Now that Microsoft CEO Satya Nadella has appointed a new CEO to run Microsoft's biggest businesses, he has a little more time on his hands for other adventures. Beyond focusing on Microsoft's technical work, Nadella is now turning to the ancient art of blogging to discuss Microsoft's year ahead and why he thinks everyone needs [&#8230;]"
+    },
+    {
+        "id": "https://blog.thechases.com/posts/assorted-less-tips/",
+        "title": "Assorted less(1) tips",
+        "link": "https://blog.thechases.com/posts/assorted-less-tips/",
+        "published": "Fri, 02 Jan 2026 12:29:23 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46464120\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/samsungs-wi-fi-speakers-ces-2026/",
+        "title": "These new Samsung Wi-Fi speakers could quietly become 2026's best audio buy",
+        "link": "https://www.zdnet.com/article/samsungs-wi-fi-speakers-ces-2026/",
+        "published": "Fri, 02 Jan 2026 16:08:00 GMT",
+        "source": "Latest news",
+        "summary": "Alongside a new flagship and all-in-one soundbar, Samsung has unveiled a duo of Wi-Fi-enabled smart speakers."
+    },
+    {
+        "id": "https://www.zdnet.com/article/clicks-keyboards-ces-2026/",
+        "title": "My search for the ultimate MagSafe accessory is over: This keyboard checks all the boxes",
+        "link": "https://www.zdnet.com/article/clicks-keyboards-ces-2026/",
+        "published": "Fri, 02 Jan 2026 15:51:00 GMT",
+        "source": "Latest news",
+        "summary": "Clicks is launching the CES news cycle with two new keyboard-focused products: a keyboard for all and a communication-focused smartphone."
+    },
+    {
+        "id": "https://www.zdnet.com/article/k3-ultramulti-keychain-review/",
+        "title": "This multitool just earned a permanent spot on my keychain - here's everything it can do",
+        "link": "https://www.zdnet.com/article/k3-ultramulti-keychain-review/",
+        "published": "Fri, 02 Jan 2026 15:39:00 GMT",
+        "source": "Latest news",
+        "summary": "The K3 Ultramulti EDC keychain tool is multifunctional, combining a flashlight, laser pointer, and lighter into one convenient device."
+    },
+    {
+        "id": "https://www.zdnet.com/article/puma-browser-replace-google-chrome/",
+        "title": "I replaced Google Chrome with a free local browser on my Pixel, and I'd pay good money for it",
+        "link": "https://www.zdnet.com/article/puma-browser-replace-google-chrome/",
+        "published": "Fri, 02 Jan 2026 15:10:00 GMT",
+        "source": "Latest news",
+        "summary": "Puma works on iPhone and Android, providing you with secure, local AI directly in your mobile browser."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/sebi-developing-ai-driven-tool-to-analyse-cyber-safety-at-entities/articleshow/126308796.cms",
+        "title": "Sebi developing AI-driven tool to analyse cyber safety at entities",
+        "link": "https://economictimes.indiatimes.com/tech/technology/sebi-developing-ai-driven-tool-to-analyse-cyber-safety-at-entities/articleshow/126308796.cms",
+        "published": "Fri, 02 Jan 2026 20:51:21 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Sebi chairman Tuhin Kanta Pandey revealed that the markets regulator is spearheading the development of an innovative AI tool designed to assess the cyber safety of regulated entities. A dedicated working group will also focus on crafting a comprehensive technology roadmap for market infrastructure institutions, laying out a strategic vision for the next five and ten years."
+    },
+    {
+        "id": "https://yourstory.com/2026/01/social-media-should-take-responsibility-content-they-publish-vaishnaw",
+        "title": "Social media should take responsibility for the content they publish: Ashwini Vaishnaw",
+        "link": "https://yourstory.com/2026/01/social-media-should-take-responsibility-content-they-publish-vaishnaw",
+        "published": "Fri, 02 Jan 2026 13:46:02 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "The Centre has earlier this week warned online platforms\u2014mainly social media firms\u2014of legal consequences if they fail to act on obscene, vulgar, pornographic, paedophilic, and other forms of unlawful content."
+    },
+    {
+        "id": "https://inc42.com/buzz/meity-issues-notice-to-x-over-alleged-misuse-of-grok-for-sexually-explicit-content/",
+        "title": "MeitY Issues Notice To X Over Alleged Misuse Of Grok For Sexually Explicit Content",
+        "link": "https://inc42.com/buzz/meity-issues-notice-to-x-over-alleged-misuse-of-grok-for-sexually-explicit-content/",
+        "published": "Fri, 02 Jan 2026 15:13:36 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"700\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2018/05/Elon-Musk_Tesla-CEO.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1000\" />The Ministry of Electronics and Information Technology (MeitY) has issued a formal notice to X Corp, flagging what it described&#8230;"
     }
 ]
