--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -36638,5 +36638,109 @@
         "published": "Fri, 02 Jan 2026 15:13:36 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"700\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2018/05/Elon-Musk_Tesla-CEO.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1000\" />The Ministry of Electronics and Information Technology (MeitY) has issued a formal notice to X Corp, flagging what it described&#8230;"
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/02/tesla-annual-sales-decline-9-as-its-overtaken-by-byd-as-global-ev-leader/",
+        "title": "Tesla annual sales decline 9% as it\u2019s overtaken by BYD as global EV leader",
+        "link": "https://techcrunch.com/2026/01/02/tesla-annual-sales-decline-9-as-its-overtaken-by-byd-as-global-ev-leader/",
+        "published": "Fri, 02 Jan 2026 16:17:47 +0000",
+        "source": "TechCrunch",
+        "summary": "Tesla annual sales have fallen for the second year in a row, a drop fueled by the removal of the federal tax credit in the U.S. and competition from Chinese automakers."
+    },
+    {
+        "id": "https://arstechnica.com/cars/2026/01/tesla-sales-fell-by-9-percent-in-2025-its-second-yearly-decline/",
+        "title": "Tesla sales fell by 9 percent in 2025, its second yearly decline",
+        "link": "https://arstechnica.com/cars/2026/01/tesla-sales-fell-by-9-percent-in-2025-its-second-yearly-decline/",
+        "published": "Fri, 02 Jan 2026 16:30:51 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Deadly doors, a busted battery bet, and a toxic owner: what's not to like?"
+    },
+    {
+        "id": "https://arstechnica.com/space/2026/01/finally-some-good-news-for-russia-the-space-station-is-no-longer-leaking/",
+        "title": "After half a decade, the Russian space station segment stopped leaking",
+        "link": "https://arstechnica.com/space/2026/01/finally-some-good-news-for-russia-the-space-station-is-no-longer-leaking/",
+        "published": "Fri, 02 Jan 2026 15:30:13 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "\"NASA and Roscosmos continue to monitor and investigate the previously observed cracks.\""
+    },
+    {
+        "id": "https://www.engadget.com/transportation/evs/how-to-watch-the-sony-honda-afeela-ces-2026-press-conference-monday-130048051.html?src=rss",
+        "title": "How to watch the Sony Honda Afeela CES 2026 press conference",
+        "link": "https://www.engadget.com/transportation/evs/how-to-watch-the-sony-honda-afeela-ces-2026-press-conference-monday-130048051.html?src=rss",
+        "published": "Fri, 02 Jan 2026 16:30:37 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<figure><img alt=\"Sony Honda Mobility\" src=\"https://s.yimg.com/os/creatr-uploaded-images/2025-12/3f099890-d9ef-11f0-a3f3-bb8a02df8254\" style=\"height: 1800px; width: 3200px;\" /><figcaption></figcaption></figure>\n<p>Sony's CES 2026 press conference is just a few days away, and this year comes with a twist: Rather than an overview of Sony's electronics, video game and Hollywood studio plans for the new year, the presser will have a more narrow focus: electric vehicles. Sound odd? That's because the"
+    },
+    {
+        "id": "https://news.ycombinator.com/item?id=46466074",
+        "title": "Ask HN: Who is hiring? (January 2026)",
+        "link": "https://news.ycombinator.com/item?id=46466074",
+        "published": "Fri, 02 Jan 2026 16:00:42 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46466074\">Comments</a>"
+    },
+    {
+        "id": "https://www.punkt.ch/blogs/news/punkt-unveils-mc03",
+        "title": "Punkt. Unveils MC03 Smartphone",
+        "link": "https://www.punkt.ch/blogs/news/punkt-unveils-mc03",
+        "published": "Fri, 02 Jan 2026 16:23:34 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46466364\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/punkt-mc03-phone-ces-2026/",
+        "title": "Want a truly private phone? This $700 handset promises that - and a removable battery",
+        "link": "https://www.zdnet.com/article/punkt-mc03-phone-ces-2026/",
+        "published": "Fri, 02 Jan 2026 17:08:00 GMT",
+        "source": "Latest news",
+        "summary": "If maintaining your privacy is important for you, devices like the Punkt MC03 help you minimize your exposure."
+    },
+    {
+        "id": "https://www.zdnet.com/article/memories-ai-wearable-project-luci-ces/",
+        "title": "The most exciting AI wearable at CES 2026 might not be smart glasses after all",
+        "link": "https://www.zdnet.com/article/memories-ai-wearable-project-luci-ces/",
+        "published": "Fri, 02 Jan 2026 17:00:00 GMT",
+        "source": "Latest news",
+        "summary": "Exclusive: Memories.ai's wearable pin is now more lightweight and records for longer. But there's a bigger story to tell here."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/zomato-delivery-partners-hourly-earnings-rose-10-9-in-2025-eternal-ceo-deepinder-goyal/articleshow/126309748.cms",
+        "title": "Zomato delivery partners\u2019 hourly earnings rose 10.9% in 2025: Eternal CEO Deepinder Goyal",
+        "link": "https://economictimes.indiatimes.com/tech/technology/zomato-delivery-partners-hourly-earnings-rose-10-9-in-2025-eternal-ceo-deepinder-goyal/articleshow/126309748.cms",
+        "published": "Fri, 02 Jan 2026 22:11:52 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Average earnings per hour for delivery partners on Zomato rose to Rs 102 in 2025, up from Rs 92 in 2024, marking a 10.9% year-on-year increase, according to a fact sheet released by Eternal CEO Deepinder Goyal on X."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/blinkits-ambulance-service-turns-1-qcomm-platform-doubles-network-in-5-months/articleshow/126309589.cms",
+        "title": "Blinkit\u2019s ambulance service turns 1: Qcomm platform doubles network in 5 months",
+        "link": "https://economictimes.indiatimes.com/tech/technology/blinkits-ambulance-service-turns-1-qcomm-platform-doubles-network-in-5-months/articleshow/126309589.cms",
+        "published": "Fri, 02 Jan 2026 22:08:26 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Per CEO Albinder Dhindsa, the service handled over 4,200 cases in Delhi-NCR through 25 ambulances. It trained over 70 paramedics from the Blinkit Academy in their ambulances. Competitor Eternal, too, operates an ambulance service in Gurugram."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/eternal-ceo-deepinder-goyal-to-publish-factsheet-on-gig-worker-earnings/articleshow/126309266.cms",
+        "title": "Eternal CEO Deepinder Goyal to publish 'factsheet' on gig worker earnings",
+        "link": "https://economictimes.indiatimes.com/tech/technology/eternal-ceo-deepinder-goyal-to-publish-factsheet-on-gig-worker-earnings/articleshow/126309266.cms",
+        "published": "Fri, 02 Jan 2026 21:35:41 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "This follows YouTuber Dhruv Rathee asking Goyal to disclose the average hourly income of gig workers on the platform. The exchange is part of a wider online debate on the working conditions and pay of delivery workers, with creators and commentators demanding greater transparency from food delivery and quick commerce platforms."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/french-ministers-report-groks-sex-related-content-on-the-x-platform-to-prosecutors/articleshow/126309230.cms",
+        "title": "French ministers report Grok's sex-related content on the X platform to prosecutors",
+        "link": "https://economictimes.indiatimes.com/tech/technology/french-ministers-report-groks-sex-related-content-on-the-x-platform-to-prosecutors/articleshow/126309230.cms",
+        "published": "Fri, 02 Jan 2026 21:31:29 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Grok said \u200bearlier on Friday lapses \u200cin \u200dsafeguards had resulted \u200din \"images depicting minors in minimal \u200cclothing\" on social media platform X and that improvements were being made to prevent this."
+    },
+    {
+        "id": "https://inc42.com/buzz/centre-proposes-90-day-work-a-year-rule-to-enhance-gig-workers-social-security/",
+        "title": "Centre Proposes 90-Day Work A Year Rule To Enhance Gig Workers\u2019 Social Security",
+        "link": "https://inc42.com/buzz/centre-proposes-90-day-work-a-year-rule-to-enhance-gig-workers-social-security/",
+        "published": "Fri, 02 Jan 2026 16:25:13 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Telangana Gig Workers\u2019 Bill: A Breakthrough Or Another Stalled Effort?\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/11/GIG-Worker-ftr.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Amid brewing controversy around employment conditions of gig-workers, the central government introduced a minimum 90-day work requirement\u00a0 for these workers&#8230;"
     }
 ]
