📚 Auto-update: News data refreshed - 2026-01-02 18:16 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -36742,5 +36742,101 @@
         "published": "Fri, 02 Jan 2026 16:25:13 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"Telangana Gig Workers\u2019 Bill: A Breakthrough Or Another Stalled Effort?\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/11/GIG-Worker-ftr.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Amid brewing controversy around employment conditions of gig-workers, the central government introduced a minimum 90-day work requirement\u00a0 for these workers&#8230;"
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/02/10-useful-gadgets-for-your-first-apartment/",
+        "title": "10 useful gadgets for your first apartment",
+        "link": "https://techcrunch.com/2026/01/02/10-useful-gadgets-for-your-first-apartment/",
+        "published": "Fri, 02 Jan 2026 18:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "From home security systems and smart smoke detectors to a sunrise alarm gently that wakes you up, here are the must-have gadgets for living in your first apartment."
+    },
+    {
+        "id": "https://arstechnica.com/gaming/2026/01/final-reminder-donate-to-win-swag-in-our-annual-charity-drive-sweepstakes-4/",
+        "title": "Final reminder: Donate to win swag in our annual Charity Drive sweepstakes",
+        "link": "https://arstechnica.com/gaming/2026/01/final-reminder-donate-to-win-swag-in-our-annual-charity-drive-sweepstakes-4/",
+        "published": "Fri, 02 Jan 2026 17:10:12 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Today is your last chance to add to this year's charity haul of nearly $38,000."
+    },
+    {
+        "id": "https://arstechnica.com/tech-policy/2026/01/xai-silent-after-grok-sexualized-images-of-kids-dril-mocks-groks-apology/",
+        "title": "xAI silent after Grok sexualized images of kids; dril mocks Grok\u2019s \u201capology\u201d",
+        "link": "https://arstechnica.com/tech-policy/2026/01/xai-silent-after-grok-sexualized-images-of-kids-dril-mocks-groks-apology/",
+        "published": "Fri, 02 Jan 2026 16:50:51 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "xAI may be liable for Grok generating AI CSAM."
+    },
+    {
+        "id": "https://www.engadget.com/gaming/how-to-watch-awesome-games-done-quick-2026-174938687.html?src=rss",
+        "title": "How to watch Awesome Games Done Quick 2026",
+        "link": "https://www.engadget.com/gaming/how-to-watch-awesome-games-done-quick-2026-174938687.html?src=rss",
+        "published": "Fri, 02 Jan 2026 17:49:38 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>It's time for more speedrunning (and other shenanigans) with the Games Done Quick (GDQ) crew. The first event of the year, Awesome Games Done Quick (AGDQ), kicks off on Sunday, January 4, with <em>Super Mario Sunshine</em>. Donations for this year's shindig will benefit the <a class=\"link\" href=\"https://preventcancer.org/\" target=\"_blank\">Prevent Cancer Foundation</a>.</p><p>AGDQ 2026 has a whole week of 24/7 speedruns on tap. You'll see slots for some of 2025's biggest games: <a class=\"link\""
+    },
+    {
+        "id": "https://www.engadget.com/gaming/how-to-watch-the-first-ever-lego-ces-2026-press-conference-live-monday-130005336.html?src=rss",
+        "title": "How to watch the first-ever Lego CES 2026 press conference live",
+        "link": "https://www.engadget.com/gaming/how-to-watch-the-first-ever-lego-ces-2026-press-conference-live-monday-130005336.html?src=rss",
+        "published": "Fri, 02 Jan 2026 17:46:27 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<figure><img src=\"https://s.yimg.com/os/creatr-uploaded-images/2025-12/ced0c170-dd13-11f0-b394-1dea3c7b6af3\" style=\"height: 5464px; width: 8192px;\" /><figcaption>picture alliance via Getty Images</figcaption></figure>\n<p>The Lego Group is set to host its very first press conference at <a href=\"https://www.engadget.com/big-tech/ces-2026-preview-what-were-expecting-from-techs-biggest-conference-in-january-120000768.html\">CES 2026</a> \u2014 but exactly what it plans to unveil is still under wraps. The "
+    },
+    {
+        "id": "https://www.engadget.com/computing/laptops/lg-made-up-a-new-word-for-its-next-ultralight-gram-laptops-aerominum-172323577.html?src=rss",
+        "title": "LG made up a new word for its next ultralight Gram laptops: 'Aerominum'",
+        "link": "https://www.engadget.com/computing/laptops/lg-made-up-a-new-word-for-its-next-ultralight-gram-laptops-aerominum-172323577.html?src=rss",
+        "published": "Fri, 02 Jan 2026 17:23:23 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>LG just announced some new Gram AI laptops <a href=\"https://www.engadget.com/social-media/engadget-podcast-everything-we-expect-at-ces-2026-144657955.html\"><ins>ahead of CES 2026</ins></a>. These are incredibly portable laptops that the company says are the &quot;lightest in their class.&quot; This is largely thanks to a proprietary material that LG has dubbed Aerominum.</p>\n<p>This material reportedly &quot;reduces the laptop's weight while reinforcing&quot; structural strength. In other wor"
+    },
+    {
+        "id": "https://www.engadget.com/computing/how-to-watch-the-nvidia-ces-2026-press-conference-live-jan-5-130028279.html?src=rss",
+        "title": "How to watch the NVIDIA CES 2026 presentation live",
+        "link": "https://www.engadget.com/computing/how-to-watch-the-nvidia-ces-2026-press-conference-live-jan-5-130028279.html?src=rss",
+        "published": "Fri, 02 Jan 2026 17:15:37 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<figure><img alt=\"NVIDIA AI Computing Card \" src=\"https://s.yimg.com/os/creatr-uploaded-images/2025-12/b0333b00-dcee-11f0-a993-97c527ebca4b\" style=\"height: 4000px; width: 6000px;\" /><figcaption>CFOTO via Getty Images</figcaption></figure>\n<p>During CES 2025, NVIDIA spent much of its keynote touting its leading position in artificial intelligence. Still, the company managed to squeeze in a few notable hardware announcements, including <a href=\"https://www.engadget.com/ai/everything-nvidia-ceo-jen"
+    },
+    {
+        "id": "https://www.clicksphone.com/en/communicator",
+        "title": "Clicks Communicator",
+        "link": "https://www.clicksphone.com/en/communicator",
+        "published": "Fri, 02 Jan 2026 17:22:04 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46467057\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/tuxedo-computers-infinitybook-14-pro-laptop-review/",
+        "title": "The Linux laptop I keep coming back to nails performance and portability",
+        "link": "https://www.zdnet.com/article/tuxedo-computers-infinitybook-14-pro-laptop-review/",
+        "published": "Fri, 02 Jan 2026 17:25:00 GMT",
+        "source": "Latest news",
+        "summary": "Tuxedo Computers' InfinityBook 14 Pro runs Tuxedo Linux, based on Ubuntu."
+    },
+    {
+        "id": "https://www.zdnet.com/article/samsung-odyssey-3d-monitor-ces/",
+        "title": "Samsung unveils 6K 3D monitors ahead of CES 2026, and I'm already dreading the splurge",
+        "link": "https://www.zdnet.com/article/samsung-odyssey-3d-monitor-ces/",
+        "published": "Fri, 02 Jan 2026 17:11:00 GMT",
+        "source": "Latest news",
+        "summary": "Samsung has unveiled the world's first 6K, 3D gaming monitor ahead of CES - but will it be a worthwhile purchase?"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/funding/ettech-deals-digest-startups-raise-50-million-this-week-down-61-on-year/articleshow/126310160.cms",
+        "title": "ETtech Deals Digest: Startups raise $50 million this week, down 61% on-year",
+        "link": "https://economictimes.indiatimes.com/tech/funding/ettech-deals-digest-startups-raise-50-million-this-week-down-61-on-year/articleshow/126310160.cms",
+        "published": "Fri, 02 Jan 2026 22:47:08 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "The number of deals during the week was also down at just five transactions, compared to 43 in the corresponding week last year."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/labour-ministry-proposes-90-day-annual-work-threshold-for-gig-worker-social-security/articleshow/126310037.cms",
+        "title": "Labour Ministry proposes 90-day annual work threshold for gig worker social security",
+        "link": "https://economictimes.indiatimes.com/tech/technology/labour-ministry-proposes-90-day-annual-work-threshold-for-gig-worker-social-security/articleshow/126310037.cms",
+        "published": "Fri, 02 Jan 2026 22:34:29 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "The Labour Ministry has proposed a 90-day annual work threshold as the mandatory eligibility criteria for gig and platform workers to access social security under new draft rules on the Social Security Code 2020, published on December 31. The four labour codes, including the Social Security Code 2020, were notified on November 21, 2025, and now draft rules have been pre-published for stakeholders' feedback."
     }
 ]
